<resources>
    <!-- Title and menu items -->
    <string name="app_name">Estatefinder</string>
    <string name="title_activity_login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Login_label">Login</string>
    <string name="SignUp_label"> Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">registerActivity</string>
    <string name="home_menu_label">Home</string>
    <string name="favorite_menu_label">My Favorites</string>
    <string name="realestate_menu_label">Real Estate</string>
    <string name="renovations_menu_label">Renovations</string>
    <string name="legalservices_menu_label">Browse All</string>

    <string name="main_menu_fragment">MAIN_MENU</string>
    <string name="favs_menu_fragment">FAVS</string>
    <string name="estate_menu_fragment">ESTATE</string>
    <string name="renovation_menu_fragment">RENOVATION</string>
    <string name="browse_menu_fragment">BROWSE</string>

</resources>
