<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hugo.estatefinder.MainMenuFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        app:srcCompat="@drawable/ic_menu_camera"
        android:id="@+id/estate_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_alignTop="@+id/favorite_btn"
        android:layout_toRightOf="@+id/favorite_btn"
        android:layout_toEndOf="@+id/favorite_btn" />

    <ImageButton
        app:srcCompat="@drawable/ic_menu_camera"
        android:id="@+id/browse_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/renovations_btn"
        android:layout_alignLeft="@+id/estate_btn"
        android:layout_alignStart="@+id/estate_btn" />

    <ImageButton
        app:srcCompat="@drawable/ic_menu_camera"
        android:id="@+id/favorite_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="51dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        app:srcCompat="@drawable/ic_menu_camera"
        android:id="@+id/renovations_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/favorite_btn"
        android:layout_alignLeft="@+id/favorite_btn"
        android:layout_alignStart="@+id/favorite_btn" />

    <TextView
        android:text="@string/favorite_menu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_above="@+id/estate_btn"
        android:layout_alignLeft="@+id/favorite_btn"
        android:layout_alignStart="@+id/favorite_btn"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        tools:text="@string/favorite_menu_label" />

    <TextView
        android:text="@string/renovations_menu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/browse_btn"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="14dp" />

    <TextView
        android:text="@string/legalservices_menu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignRight="@+id/browse_btn"
        android:layout_alignEnd="@+id/browse_btn"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/realestate_menu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:id="@+id/textView6"
        tools:text="@string/realestate_menu_label" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/current_fragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </FrameLayout>

</RelativeLayout>
